tests/snapshots/examples_fixtures/aoc__2025__aoc_day10_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day10_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `iter_free_bounded`.

  examples/aoc/2025/aoc_day10_part2.flx:687:1
    |
687 | iter_free_bounded(mat, pivot_cols, free_cols, nbtn, fidx, free_vals, 0, max_v, best, mt)
    | ^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let iter_free_bounded = ...;

Help:
  Did you mean `search_free_bounded`?


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day10_part2.flx:752:21
    |
752 | let machine_lines = [trim(line) | line <- lines, trim(line) != ""]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day10_part2.flx:753:15
    |
753 | let presses = [machine_min_presses(line) | line <- machine_lines]
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day10_part2.flx:754:7
    |
754 | print(sum(presses))
    |       ^^^

Hint:
  Define it first: let sum = ...;

Help:
  Did you mean `sum_free`?

Found 4 errors.
== stdout ==
<not executed>
